# libjdk

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
libs/java.datatransfer/main/: CMakeLists.txt
libs/java.datatransfer/main/share/: export-classes.txt  export-packages.txt
libs/java.datatransfer/main/share/classes/: java.datatransfer.cpp  java.datatransfer.h  module-info
libs/java.datatransfer/main/share/include/: java.datatransfer.h
libs/java.desktop/main/: CMakeLists.txt
libs/java.desktop/main/linux/: export-classes.txt  export-packages.txt
libs/java.desktop/main/linux/classes/: CMakeLists.txt  java.desktop.cpp
libs/java.desktop/main/linux/native/: CMakeLists.txt  com_sun_java_swing_plaf_gtk_GTKEngine.h  sun_awt_FcFontManager.h  sun_awt_UNIXToolkit.h  sun_awt_X11GraphicsConfig.h  sun_awt_X11GraphicsDevice.h  sun_awt_X11GraphicsEnvironment.h  sun_awt_X11InputMethodBase.h  sun_awt_X11_XDesktopPeer.h  sun_awt_X11_XRobotPeer.h  sun_awt_X11_XTaskbarPeer.h  sun_awt_X11_XToolkit.h  sun_awt_X11_XWindow.h  sun_font_NativeStrike.h  sun_java2d_opengl_GLXSurfaceData.h  sun_java2d_x11_X11SurfaceData.h  sun_java2d_xr_XRBackendNative.h
libs/java.desktop/main/macos/: export-classes.txt  export-packages.txt
libs/java.desktop/main/macos/classes/: CMakeLists.txt  java.desktop.cpp  module-info.h
libs/java.desktop/main/macos/native/: CMakeLists.txt  apple_laf_JRSUIConstants_AlignmentHorizontal.h  apple_laf_JRSUIConstants_AlignmentVertical.h  apple_laf_JRSUIConstants_Animating.h  (+49 more)
libs/java.desktop/main/share/: dependencies.txt  sun.java2d.loops.GraphicsPrimitiveMgr.cpp
libs/java.desktop/main/windows/: export-classes.txt  export-packages.txt
libs/java.management.rmi/: CMakeLists.txt  README.md
libs/java.management.rmi/legal/: openjdk.md
libs/java.management.rmi/main/: CMakeLists.txt  dependencies.txt  export-classes.txt  export-packages.txt
libs/java.management.rmi/main/classes/: java.management.rmi.cpp  java.management.rmi.h  module-info.h
libs/java.management.rmi/main/include/: java.management.rmi.h
libs/java.management.rmi/test/: CMakeLists.txt  __test__.cpp  dependencies.txt
libs/java.management.rmi/test/classes/: java.management.rmi.test.cpp  java.management.rmi.test.h
libs/java.management/main/: CMakeLists.txt  export-classes.txt  export-packages.txt
libs/java.management/main/classes/: CMakeLists.txt  java.management.cpp  java.management.h  module-info
libs/java.management/main/include/: java.management.h
libs/java.management/main/native/: CMakeLists.txt  sun_management_ThreadImpl.h
libs/java.naming/main/: CMakeLists.txt  dependencies.txt  export-classes.txt  export-packages.txt
libs/java.naming/main/classes/: CMakeLists.txt  java.naming.cpp  java.naming.h  module-info
libs/java.naming/main/include/: java.naming.h
libs/java.prefs/main/: CMakeLists.txt
libs/java.prefs/main/share/: dependencies.txt  export-classes.txt  java.util.prefs.Base64.cpp
libs/java.se/test/classes/: CMakeLists.txt  java.se.test.cpp  java.se.test.h
libs/java.security.jgss/main/: CMakeLists.txt
libs/java.security.jgss/main/linux/: export-packages.txt
libs/java.security.jgss/main/macos/: export-classes.txt
libs/java.security.jgss/main/share/: dependencies.txt
libs/java.security.jgss/main/windows/: export-classes.txt  export-packages.txt  sun.security.krb5.internal.tools.Kinit.cpp  sun.security.krb5.internal.tools.Klist.cpp  sun.security.krb5.internal.tools.Ktab.cpp
libs/java.sql.rowset/main/: CMakeLists.txt  dependencies.txt  export-classes.txt  export-packages.txt
libs/java.sql.rowset/main/classes/: CMakeLists.txt  java.sql.rowset.cpp  java.sql.rowset.h  module-info
libs/java.sql.rowset/main/include/: java.sql.rowset.h
libs/java.xml.crypto/main/: CMakeLists.txt  dependencies.txt  export-classes.txt  export-packages.txt
libs/java.xml.crypto/main/classes/: CMakeLists.txt  java.xml.crypto.cpp  java.xml.crypto.h  module-info
libs/java.xml.crypto/main/include/: java.xml.crypto.h
libs/java.xml/main/: CMakeLists.txt  com.sun.org.apache.bcel.internal.util.BCELifier.cpp  com.sun.org.apache.bcel.internal.util.Class2HTML.cpp  com.sun.org.apache.xalan.internal.xsltc.ProcessorVersion.cpp  com.sun.org.apache.xerces.internal.impl.Constants.cpp  com.sun.org.apache.xerces.internal.impl.xpath.XPath.cpp  com.sun.org.apache.xerces.internal.impl.xpath.regex.REUtil.cpp  export-classes.txt  export-packages.txt
libs/java.xml/main/classes/: CMakeLists.txt  java.xml.cpp  java.xml.h  module-info
libs/java.xml/main/include/: java.xml.h
libs/jdk.charsets/: CMakeLists.txt  README.md
libs/jdk.charsets/main/: CMakeLists.txt
libs/jdk.charsets/main/classes/: CMakeLists.txt  jdk.charsets.cpp  module-info
libs/jdk.charsets/main/include/: jdk.charsets.h
libs/jdk.charsets/test/: CMakeLists.txt  __test__.cpp  dependencies.txt
libs/jdk.charsets/test/classes/: CurrencyFormat.h  JapaneseTest.cpp  JapaneseTest.h  KoreanTest.h  LargeMessageFormat.h  NonGregorianFormatTest.h  TestPeruCurrencyFormat.cpp  TestWrite.h  bug4117335.cpp  jdk.charsets.test.cpp  jdk.charsets.test.h
libs/jdk.charsets/test/share/: __test__.cpp
libs/jdk.compiler/javac/: CMakeLists.txt  __app__.cpp
libs/jdk.compiler/javac/classes/: CMakeLists.txt  Javac.cpp  Javac.h  jdk.compiler.javac.cpp  jdk.compiler.javac.h
libs/jdk.compiler/main/: CMakeLists.txt  com.sun.tools.javac.Main.cpp  com.sun.tools.javac.launcher.Main.cpp  com.sun.tools.sjavac.Main.cpp  dependencies.txt  export-classes.txt  export-packages.txt  sun.tools.serialver.SerialVer.cpp
libs/jdk.compiler/main/classes/: CMakeLists.txt  jdk.compiler.cpp  jdk.compiler.h  module-info.h
libs/jdk.compiler/main/include/: jdk.compiler.h
libs/jdk.jartool/main/: CMakeLists.txt  export-classes.txt  export-packages.txt  sun.security.tools.jarsigner.Main.cpp  sun.tools.jar.Main.cpp
libs/jdk.jartool/main/classes/: CMakeLists.txt  jdk.jartool.cpp  jdk.jartool.h  module-info.h
libs/jdk.jartool/main/include/: jdk.jartool.h
libs/jdk.net/test/: CMakeLists.txt
libs/jdk.net/test/share/: __test__.cpp  dependencies.txt
(+42357 files in other folders)
