#machine generated

cmake_minimum_required(VERSION 3.23)

set(JCPP_PROJECT_GROUP "")
set(JCPP_PROJECT_NAME "java.management.rmi")
set(JCPP_PROJECT_VERSION "17.35")
if(JCPP_PROJECT_GROUP)
	set(JCPP_PROJECT_FULL_NAME "${JCPP_PROJECT_GROUP}-${JCPP_PROJECT_NAME}")
	string(REPLACE "." "/" JCPP_PROJECT_GROUP_PATH ${JCPP_PROJECT_GROUP})
	set(JCPP_PROJECT_DIR "${JCPP_PROJECT_GROUP_PATH}/${JCPP_PROJECT_NAME}/${JCPP_PROJECT_VERSION}")
else()
	set(JCPP_PROJECT_FULL_NAME "${JCPP_PROJECT_NAME}")
	set(JCPP_PROJECT_DIR "${JCPP_PROJECT_NAME}/${JCPP_PROJECT_VERSION}")
endif()
message(STATUS "${JCPP_PROJECT_DIR}")

project(${JCPP_PROJECT_NAME} C CXX)

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
	set(JCPP_OS "linux")
elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
	set(JCPP_OS "macos")
elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
	set(JCPP_OS "windows")
else()
	message(WARNING "Unknown system name:${CMAKE_SYSTEM_NAME}")
endif()
message(STATUS "CMAKE_SYSTEM_NAME:${CMAKE_SYSTEM_NAME}")
message(STATUS "JCPP_OS:${JCPP_OS}")

if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64|arm64|ARM64)")
	set(JCPP_ARCH "aarch64")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86_64|AMD64)")
	set(JCPP_ARCH "x86_64")
else()
	message(WARNING "Unknown processor:${CMAKE_SYSTEM_PROCESSOR}")
endif()
message(STATUS "CMAKE_SYSTEM_PROCESSOR:${CMAKE_SYSTEM_PROCESSOR}")
message(STATUS "JCPP_ARCH:${JCPP_ARCH}")

option(BUILD_SHARED_LIB "Build shared lib" ON)
option(BUILD_TEST "Build test" ON)
set(SUBSYSTEM "CONSOLE" CACHE STRING "Set the subsystem for the executable")
message(STATUS "SUBSYSTEM:${SUBSYSTEM}")
set(JCPP_SUBSYSTEM "${SUBSYSTEM}")

if(BUILD_SHARED_LIB)
	message(STATUS "build shared lib")
else()
	set(BUILD_STATIC_LIB true)
	message(STATUS "build static lib")
endif()

if(BUILD_TEST)
	message(STATUS "build test")
endif()

if(NOT JCPP_REPOSITORY_ROOT)
	if(NOT JCPP_HOME)
		set(JCPP_HOME "$ENV{JCPP_HOME}")
		if(NOT JCPP_HOME)
			if(JCPP_OS MATCHES "windows")
				set(JCPP_HOME "$ENV{HOMEDRIVE}$ENV{HOMEPATH}/jcpp")
			else()
				set(JCPP_HOME "$ENV{HOME}/jcpp")
			endif()
		endif()
	endif()
	get_filename_component(JCPP_HOME "${JCPP_HOME}" ABSOLUTE)
	cmake_path(SET JCPP_HOME "${JCPP_HOME}")
	set(JCPP_REPOSITORY_ROOT "${JCPP_HOME}/repository")
else()
	get_filename_component(JCPP_REPOSITORY_ROOT "${JCPP_REPOSITORY_ROOT}" ABSOLUTE)
	cmake_path(SET JCPP_REPOSITORY_ROOT "${JCPP_REPOSITORY_ROOT}")
endif()

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	set(CMAKE_INSTALL_PREFIX "${JCPP_REPOSITORY_ROOT}/${JCPP_PROJECT_DIR}" CACHE PATH "..." FORCE)
endif()
if(CMAKE_INSTALL_PREFIX STREQUAL "${JCPP_REPOSITORY_ROOT}/${JCPP_PROJECT_DIR}")
	set(JCPP_INSTALL_INCLUDE_DIR "include")
	if(CMAKE_BUILD_TYPE MATCHES "Debug")
		set(JCPP_INSTALL_BIN_DIR "debug/bin")
		set(JCPP_INSTALL_LIB_DIR "debug/lib")
	else()
		set(JCPP_INSTALL_BIN_DIR "$<$<CONFIG:Debug>:debug/>bin")
		set(JCPP_INSTALL_LIB_DIR "$<$<CONFIG:Debug>:debug/>lib")
	endif()
else()
	set(JCPP_INSTALL_INCLUDE_DIR "include")
	set(JCPP_INSTALL_BIN_DIR "bin")
	set(JCPP_INSTALL_LIB_DIR "lib")
endif()
message(STATUS "CMAKE_INSTALL_PREFIX:" ${CMAKE_INSTALL_PREFIX})
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

message(STATUS "c++ Compiler is " "${CMAKE_CXX_COMPILER_ID}")

if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Zi /source-charset:utf-8 /execution-charset:utf-8")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi /source-charset:utf-8 /execution-charset:utf-8")
	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /DEBUG /OPT:REF /OPT:ICF /INCREMENTAL:NO")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DEBUG /OPT:REF /OPT:ICF /INCREMENTAL:NO")
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
	add_definitions(-fwrapv)
	add_definitions(-fno-optimize-sibling-calls)
	add_definitions(-ftls-model=initial-exec)
	add_definitions(-fnon-call-exceptions)
	add_definitions(-fomit-frame-pointer)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
	add_definitions(-Wno-implicit-function-declaration)
endif()

if(JCPP_OS STREQUAL "macos" AND JCPP_ARCH STREQUAL "x86_64")
	add_definitions(-fno-stack-check)
endif()

if(CMAKE_COMPILER_IS_GNUCXX)
	include(CheckCXXCompilerFlag)
	check_cxx_compiler_flag("-Wa,-mbig-obj" GNU_BIG_OBJ_FLAG_ENABLE)
endif()

function(jcpp_enable_bigobj target)
	target_compile_options(${target}
		PRIVATE
		$<$<CXX_COMPILER_ID:MSVC>:/bigobj>
		$<$<AND:$<CXX_COMPILER_ID:GNU>,$<BOOL:${GNU_BIG_OBJ_FLAG_ENABLE}>>:-Wa,-mbig-obj>
	)
endfunction(jcpp_enable_bigobj)

macro(jcpp_add_dependencies0)
	foreach(dep ${ARGV})
		list(FIND JCPP_DEPENDENCY_ADDED ${dep} list_index)
		if(list_index EQUAL -1)
			set(JCPP_DEPENDENCY_ADDED ${JCPP_DEPENDENCY_ADDED} ${dep})
			string(REPLACE ":" ";" depInfo ${dep})
			list(LENGTH depInfo depInfoLength)
			if(depInfoLength EQUAL 2)
				set(groupId "")
				list(GET depInfo 0 artifactId)
				list(GET depInfo 1 version)
				set(${dep}libName "${artifactId}")
				set(${dep}jcppDepPath "${JCPP_REPOSITORY_ROOT}/${artifactId}/${version}")
			else()
				list(GET depInfo 0 groupId)
				list(GET depInfo 1 artifactId)
				list(GET depInfo 2 version)
				string(REPLACE "." "/" groupPath ${groupId})
				set(${dep}libName "${groupId}-${artifactId}")
				set(${dep}jcppDepPath "${JCPP_REPOSITORY_ROOT}/${groupPath}/${artifactId}/${version}")
			endif()
			set(${dep}includeDir "${${dep}jcppDepPath}/include")
			set(${dep}libHeaderPath "${${dep}includeDir}/${${dep}libName}.h")
			file(STRINGS ${${dep}libHeaderPath} ${dep}libHeader NEWLINE_CONSUME)
			string(REPLACE "\n" ";" ${dep}libHeaderLines ${${dep}libHeader})
			foreach(${dep}line ${${dep}libHeaderLines})
				string(FIND ${${dep}line} "//$ dependency " ${dep}Index)
				if(${dep}Index EQUAL 0)
					string(LENGTH ${${dep}line} ${dep}len)
					string(SUBSTRING ${${dep}line} 15 ${${dep}len} ${dep}dependency)
					jcpp_add_dependencies0(${${dep}dependency})
				endif()
			endforeach()
			if(CMAKE_BUILD_TYPE MATCHES "Debug")
				set(binDir "${${dep}jcppDepPath}/debug/bin")
				set(libDir "${${dep}jcppDepPath}/debug/lib")
			else()
				set(binDir "${${dep}jcppDepPath}$<$<CONFIG:Debug>:/debug>/bin")
				set(libDir "${${dep}jcppDepPath}$<$<CONFIG:Debug>:/debug>/lib")
			endif()
			include_directories(
				${${dep}includeDir}
			)
			link_directories(
				${libDir}
			)
			if(${dep}libName STREQUAL "java.base")
				set(JCPP_ENCODE_SYMBOL_CMD "${binDir}/encodesymbol")
			endif()
			set(JCPP_DEPENDENCY_LIBS ${JCPP_DEPENDENCY_LIBS} "${${dep}libName}")
			if(JCPP_OS MATCHES "windows")
				set(runtimeFiles "${binDir}/${${dep}libName}.dll")
			else()
				file(GLOB runtimeFiles "${libDir}/lib${${dep}libName}.*")
				list(REMOVE_ITEM runtimeFiles "${libDir}/lib${${dep}libName}.a")
			endif()
			set(JCPP_DEPENDENCY_RUNTIME_FILE_PATHS ${JCPP_DEPENDENCY_RUNTIME_FILE_PATHS} "${runtimeFiles}")
		endif()
	endforeach()
endmacro()

macro(jcpp_add_dependencies)
	set(JCPP_DEPENDENCY_ADDED "")
	set(JCPP_DEPENDENCY_LIBS "")
	set(JCPP_DEPENDENCY_RUNTIME_FILE_PATHS "")
	jcpp_add_dependencies0(${ARGV})
endmacro()

macro(jcpp_add_main_app target name source)
	add_executable(${target} "${source}")
	SET_TARGET_PROPERTIES(${target} PROPERTIES OUTPUT_NAME "${name}")
	if(JCPP_OS MATCHES "linux")
		SET_TARGET_PROPERTIES(${target} PROPERTIES INSTALL_RPATH "\$ORIGIN;\$ORIGIN/../lib")
	elseif(JCPP_OS MATCHES "macos")
		SET_TARGET_PROPERTIES(${target} PROPERTIES INSTALL_RPATH ".;../lib")
	endif()
	jcpp_encode_symbol(${target})
	target_link_libraries(${target} PRIVATE ${JCPP_PROJECT_NAME}-main)
	install(TARGETS ${target} DESTINATION "${JCPP_INSTALL_BIN_DIR}")
	if(JCPP_OS MATCHES "windows")
		foreach(runtimeFile IN LISTS JCPP_DEPENDENCY_RUNTIME_FILE_PATHS)
			add_custom_command(TARGET ${target} POST_BUILD
				COMMAND ${CMAKE_COMMAND} -E copy_if_different
					${runtimeFile}
					$<TARGET_FILE_DIR:${target}>
			)
		endforeach()
	endif()
endmacro()

function(jcpp_encode_symbol target)
	if(JCPP_OS MATCHES "windows")
		add_custom_command(TARGET ${target} POST_BUILD
			COMMAND cmd /c ${JCPP_ENCODE_SYMBOL_CMD} $<TARGET_FILE:${target}>
		)
	endif()
endfunction(jcpp_encode_symbol)

add_subdirectory(main)
if(BUILD_TEST)
	enable_testing()
	add_subdirectory(test)
endif()

if(NOT PACKAGE_NAME)
	set(PACKAGE_NAME "${JCPP_PROJECT_FULL_NAME}")
endif()
set(CPACK_PACKAGE_NAME "${PACKAGE_NAME}")
if(NOT PACKAGE_VERSION)
	set(PACKAGE_VERSION "${JCPP_PROJECT_VERSION}")
endif()
set(CPACK_PACKAGE_VERSION "${PACKAGE_VERSION}")
set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${JCPP_OS}-${JCPP_ARCH})
set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")
if(JCPP_OS MATCHES "windows")
	set(CPACK_GENERATOR "ZIP")
	set(CPACK_SOURCE_GENERATOR "ZIP")
else()
	set(CPACK_GENERATOR "TGZ")
	set(CPACK_SOURCE_GENERATOR "TGZ")
endif()
include(CPack)
